@@ -15,25 +15,26 @@ test {
 
 tasks.register('generateAnnotationProcessorServicesFile'){
 
-    var target = file("src/main/resources/META-INF/services/javax.annotation.processing.Processor")
-    target.parentFile.mkdirs()
-    target.createNewFile()
-    target.text = ""
-
-    var classesDir = fileTree("src/main/java/com/xkball/xorlib/annotation_processor")
-    var classFiles = classesDir.getFiles().findAll { it.name.endsWith('.java') }
-    classFiles.each {
-        var path = it.path
-        var offset = path.indexOf("xkball")
-        if(offset >= 0) target.text += path.substring(offset-4,path.length()-5).replace("\\",".").replace("/",".") + '\n'
-    }
-    inputs.dir file("src/main/java")
-    outputs.file target
+//    var target = file("src/main/resources/META-INF/services/javax.annotation.processing.Processor")
+//    target.parentFile.mkdirs()
+//    target.createNewFile()
+//    target.text = ""
+//
+//    var classesDir = fileTree("src/main/java/com/xkball/xorlib/annotation_processor")
+//    var classFiles = classesDir.getFiles().findAll { it.name.endsWith('.java') }
+//    classFiles.each {
+//        var path = it.path
+//        var offset = path.indexOf("xkball")
+//        if(offset >= 0) target.text += path.substring(offset-4,path.length()-5).replace("\\",".").replace("/",".") + '\n'
+//    }
+//    inputs.dir file("src/main/java")
+//    outputs.file target
 }
 
-tasks.named("processResources") {
+tasks.named("processResources",ProcessResources) {
     //dependsOn generateAnnotationProcessorServicesFile
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    exclude 'META-INF/services/javax.annotation.processing.Processor'
 }
 
 tasks.named("shadowJar", ShadowJar){
@@ -44,6 +45,12 @@ tasks.named("shadowJar", ShadowJar){
 
 jar {
     exclude 'net/minecraft/**'
+    manifest {
+        attributes(
+                "Add-Exports": "jdk.compiler/com.sun.tools.javac.code jdk.compiler/com.sun.tools.javac.tree jdk.compiler/com.sun.tools.javac.util jdk.compiler/com.sun.tools.javac.processing jdk.compiler/com.sun.tools.javac.comp",
+                "Add-Opens": "jdk.compiler/com.sun.tools.javac.processing"
+        )
+    }
 }
 
 repositories {
